[package]
name        = "flywheelmc-wasm"
version     = "0.1.0"
authors     = ["FlywheelMC <https://github.com/FlywheelMC>"]
description = "FlywheelMC plot WASM executor"
license     = "LGPL-3.0-only"

readme     = "README.md"
homepage   = "https://github.com/FlywheelMC"
repository = "https://github.com/FlywheelMC/flywheelmc-wasm"
publish    = false

keywords   = [ "flywheel", "mc", "minecraft", "game" ]
categories = [ "wasm" ]

edition      = "2024"
rust-version = "1.89"


[features]
unstable = [ ]


[lints.rust]
unused_parens = "allow"


[dependencies.flywheelmc-common]
path = "../flywheelmc-common"
[dependencies.flywheelmc-players]
path = "../flywheelmc-players"


[dependencies.wt]
package  = "wasmtime"
version  = "32.0"
features = [ "runtime" ]
